tests/diagnostics_golden/diag_observe_mutation.txt
Diagnostics Golden: Observe Mutation
Source: tests/negative/neg_own_observe_mutate.safe

Expected diagnostic output:
------------------------------------------------------------------------
neg_own_observe_mutate.safe:12:7: error: observer 'observer' provides read-only access
  |
  | 12 |       observer.rate = 200  -- ERROR: mutation through observer
  |    |       ^~~~~~~~
  |
  note: writes and moves through an active observer are not permitted.
  note: rule: Safe §2.3.4 (observe is read-only; source frozen for write/move)
------------------------------------------------------------------------
